# nisify

./: README.md  integration_test.py  pyproject.toml  requirements.txt
data/: control_evidence_mappings.json  nist_csf2_controls.json
docs/: api-reference.md  architecture.md  cli-reference.md  collectors.md  configuration.md  manual-evidence.md  nist-mapping.md
examples/sample_evidence/: README.md  jamf_device_inventory.json  okta_user_inventory.json
src/nisify/: __init__.py  __main__.py  cli.py
src/nisify/analysis/: __init__.py  gap_analyzer.py  trend_tracker.py
src/nisify/backup/: __init__.py  manager.py
src/nisify/collectors/: __init__.py  aws_collector.py  base.py  datadog_collector.py  gitlab_collector.py  google_collector.py  jamf_collector.py  jira_collector.py  notion_collector.py  okta_collector.py  slab_collector.py  snowflake_collector.py  spotdraft_collector.py  zendesk_collector.py  zoom_collector.py
src/nisify/config/: __init__.py  credentials.py  settings.py
src/nisify/dashboard/: __init__.py  routes.py  server.py
src/nisify/dashboard/static/: app.js  styles.css
src/nisify/dashboard/templates/: dashboard.html  evidence.html  gaps.html  index.html  trends.html
src/nisify/demo/: __init__.py  generator.py
src/nisify/nist/: __init__.py  csf2_controls.py  mapping_engine.py  maturity_calculator.py
src/nisify/reports/: __init__.py  executive_summary.py  json_exporter.py  pdf_generator.py
src/nisify/scheduler/: __init__.py  cron.py
src/nisify/storage/: __init__.py  evidence_store.py  models.py
tests/: __init__.py  test_analysis.py  test_backup.py  test_cli.py  test_collectors.py  test_config.py  test_mapping.py  test_reports.py  test_scoring.py  test_storage.py
